--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
     "react-icons": "^5.3.0",
+    "react-otp-input": "^3.1.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "6.26.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "sass": "1.77.8",
     "styled-components": "^6.1.13",
