--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
@@ -26,10 +26,13 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "6.26.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "sass": "1.77.8",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "swiper": "^11.2.1",
     "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
