--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 REACT_APP_API_URL = http://localhost:3000/api
 DANGEROUSLY_DISABLE_HOST_CHECK=true
+
+# Google
+REACT_APP_GOOGLE_CLIENT_ID=803880541485-bp38gvmb5qcue8df9c83fmvk2aamb0g1.apps.googleusercontent.com
