--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "@hookform/resolvers": "^3.10.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.10.0",
     "@mui/material": "^6.4.2",
     "@mui/styled-engine-sc": "^6.4.2",
     "@react-oauth/google": "^0.12.1",
@@ -22,12 +22,14 @@
     "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.7.7",
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^9.0.0",
     "proxy": "^2.2.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
