--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^9.0.0",
     "proxy": "^2.2.0",
     "react": "^18.3.1",
