--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^9.0.0",
+    "moment": "^2.30.1",
     "proxy": "^2.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
