--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-collapse": "^5.1.1",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.54.2",
@@ -84,6 +85,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "source-map-loader": "^5.0.0",
     "tailwindcss": "^3.4.13"
   }
 }
