--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DANGEROUSLY_DISABLE_HOST_CHECK=true
 
 # Google
 REACT_APP_GOOGLE_CLIENT_ID=803880541485-bp38gvmb5qcue8df9c83fmvk2aamb0g1.apps.googleusercontent.com
+GENERATE_SOURCEMAP=false
