--- a/package.json
+++ b/package.json
@@ -47,11 +47,12 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "sass": "1.77.8",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.14",
-    "swiper": "^11.2.1",
+    "swiper": "^11.2.5",
     "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
