--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^6.1.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^9.0.0",
@@ -39,6 +41,7 @@
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^11.18.6",
     "react-icons": "^5.4.0",
     "react-otp-input": "^3.1.1",
     "react-pro-sidebar": "^0.7.1",
@@ -87,6 +90,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "source-map-loader": "^5.0.0",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^4.9.5"
   }
 }
