--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.14",
     "swiper": "^11.2.5",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
