--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "proxy": "^2.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
+    "react-click-away-listener": "^2.4.0",
     "react-collapse": "^5.1.1",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
@@ -55,6 +56,7 @@
     "redux-persist": "^6.0.0",
     "sass": "1.77.8",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.14",
     "swiper": "^11.2.5",
     "tailwind-scrollbar-hide": "^4.0.0",
