--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "i18next-browser-languagedetector": "^6.1.8",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.525.0",
     "mdb-react-ui-kit": "^9.0.0",
     "moment": "^2.30.1",
     "proxy": "^2.2.0",
