--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.14",
     "swiper": "^11.2.5",
+    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0",
     "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4",
